# simple-cpp-webserver

./: .travis.yml  CMakeLists.txt  Dockerfile  docker-compose.yml  vcpkg.json
cmake/: x64-linux-musl.cmake
src/: main.cpp
